--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>org.dasein</groupId>
     <artifactId>dasein-cloud-core</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>dasein-cloud-core</name>
@@ -56,7 +56,7 @@
         <connection>scm:git:git://github.com/dasein-cloud/dasein-cloud-core.git</connection>
         <developerConnection>scm:git:git@github.com:dasein-cloud/dasein-cloud-core.git</developerConnection>
         <url>http://github.com/dasein-cloud/dasein-cloud-core</url>
-      <tag>dasein-cloud-core-0.9.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <dependencies>
